添加新版合约 16 进制展示

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <p><a href="FindTokenAddressIndex.html">Violas 合约地址替换工具</a></p>
+
+<p><a href="NewFindTokenAddressIndex.html">二进制新版 Violas 合约地址替换工具</a></p>
 </body>
 </html>
