--- a/move_tools.html
+++ b/move_tools.html
@@ -71,12 +71,12 @@
             <fieldset>
                 <label>
                     <span>编译合约的默认地址</span>
-                    <input id="replace_input_default_address" style="width: 680px;" type="text"
+                    <input id="replace_input_default_address" type="text"
                            value="7257c2417e4d1038e1817c8f283ace2e"/>
                 </label>
                 <label>
                     <span>替换默认地址的合约地址</span>
-                    <input id="replace_input_new_address" style="width: 680px;" type="text"
+                    <input id="replace_input_new_address" type="text"
                            value="7f4644ae2b51b65bd3c9d414aa853407"/>
                 </label>
                 <button class="btn green" id="btn_replace">生成新的合约</button>
