修改 TypeTag 工具文字描述

--- a/move_tools.html
+++ b/move_tools.html
@@ -208,8 +208,8 @@
             }
         }
         request.onerror = function (e) {
-            ks.notice("网络加载失败,请重新选择合约!!!", {
-                time: 3000,
+            ks.notice("网络加载失败,请重新选择合约或选择国内代理版!!!", {
+                time: 5000,
                 color: "yellow"
             });
         }
