--- a/typetag_generate.html
+++ b/typetag_generate.html
@@ -20,7 +20,7 @@
             <a class="float-right btn green small" href="index.html">返回首页</a>
         </div>
         <section>
-            <h2 id>查找合约地址索引位置</h2>
+            <h2 id>生成稳定币交易 TypeTag 信息</h2>
             <fieldset>
                 <label>
                     <span>选择链信息</span>
