添加常用地址页面

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 
         <section>
             <h2>交易工具</h2>
-            <a class="btn green" href="typetag_generate.html">Libra/Violas 交易币种 TypeTag 生成器</a>
+            <p><a class="btn green" href="typetag_generate.html">Libra/Violas 交易币种 TypeTag 生成器</a></p>
+        </section>
+
+        <section>
+            <h2>钱包工具</h2>
+            <p><a class="btn green" href="common_address.html">Libra/Violas 常用地址二维码</a></p>
         </section>
     </article>
 </main>
