--- a/common_address.html
+++ b/common_address.html
@@ -6,6 +6,11 @@
     <link href="https://cdn.jsdelivr.net/gh/Dreamer-Paul/Kico-Style/kico.min.css" rel="stylesheet" type="text/css"/>
     <link href="static/doc.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
+    <style>
+        input[disabled], input[readonly], textarea[disabled] {
+            background: 0 0;
+        }
+    </style>
 </head>
 <body>
 <main class="content">
@@ -23,11 +28,11 @@
                 <img ks-original="image/7f4644ae2b51b65bd3c9d414aa853407.png">
                 <label>
                     <span>助记词</span>
-                    <pre class=" language-html"><code class=" language-html">velvet version sea near truly open blanket exchange leaf cupboard shine poem;0</code></pre>
+                    <input type="text" value="velvet version sea near truly open blanket exchange leaf cupboard shine poem;0" readonly/>
                 </label>
                 <label>
                     <span>验证密钥</span>
-                    <pre class=" language-html"><code class=" language-html">22bbf3af0bb537b48b85793b0c9b38847f4644ae2b51b65bd3c9d414aa853407</code></pre>
+                    <input type="text" value="22bbf3af0bb537b48b85793b0c9b38847f4644ae2b51b65bd3c9d414aa853407" readonly/>
                 </label>
             </fieldset>
         </section>
@@ -38,11 +43,11 @@
                 <img ks-original="image/41c30f54f4adfb37d2b16e6f245e8372.png">
                 <label>
                     <span>助记词</span>
-                    <pre class=" language-html"><code class=" language-html">velvet version sea near truly open blanket exchange leaf cupboard shine poem;1</code></pre>
+                    <input type="text" value="velvet version sea near truly open blanket exchange leaf cupboard shine poem;1" readonly/>
                 </label>
                 <label>
                     <span>验证密钥</span>
-                    <pre class=" language-html"><code class=" language-html">bc09e3cd6e2efe11222f40ab66dc09ee41c30f54f4adfb37d2b16e6f245e8372</code></pre>
+                    <input type="text" value="bc09e3cd6e2efe11222f40ab66dc09ee41c30f54f4adfb37d2b16e6f245e8372" readonly/>
                 </label>
             </fieldset>
         </section>
@@ -53,11 +58,11 @@
                 <img ks-original="image/fa279f2615270daed6061313a48360f7.png">
                 <label>
                     <span>助记词</span>
-                    <pre class=" language-html"><code class=" language-html">display paddle crush crowd often friend topple agent entry use host begin;0</code></pre>
+                    <input type="text" value="display paddle crush crowd often friend topple agent entry use host begin;0" readonly/>
                 </label>
                 <label>
                     <span>验证密钥</span>
-                    <pre class=" language-html"><code class=" language-html">e92e6c91e33f0ec5fc70425c99c5df5cfa279f2615270daed6061313a48360f7</code></pre>
+                    <input type="text" value="e92e6c91e33f0ec5fc70425c99c5df5cfa279f2615270daed6061313a48360f7" readonly/>
                 </label>
             </fieldset>
         </section>
@@ -68,11 +73,11 @@
                 <img ks-original="image/f4174e9eabcb2e968e22da4c75ac653b.png">
                 <label>
                     <span>助记词</span>
-                    <pre class=" language-html"><code class=" language-html">cram wisdom sausage sad drink unlock include also kick season crane swing;0</code></pre>
+                    <input type="text" value="cram wisdom sausage sad drink unlock include also kick season crane swing;0" readonly/>
                 </label>
                 <label>
                     <span>验证密钥</span>
-                    <pre class=" language-html"><code class=" language-html">68f7cece8761df7592e5065492fe80a5f4174e9eabcb2e968e22da4c75ac653b</code></pre>
+                    <input type="text" value="68f7cece8761df7592e5065492fe80a5f4174e9eabcb2e968e22da4c75ac653b" readonly/>
                 </label>
             </fieldset>
         </section>
