--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <h2>钱包工具</h2>
             <p><a class="btn green" href="common_address.html">Libra/Violas 常用地址二维码</a></p>
-            <p><a class="btn green" href="screen_capture_collection_address.html">Libra/Violas 常用地址二维码</a></p>
+            <p><a class="btn green" href="screen_capture_collection_address.html">Libra/Violas 二维码截图</a></p>
         </section>
     </article>
 </main>
