--- a/screen_capture_collection_address.html
+++ b/screen_capture_collection_address.html
@@ -41,6 +41,26 @@
                 <img ks-original="image/android-violas-usd-7f4644ae2b51b65bd3c9d414aa853407.jpeg">
             </fieldset>
         </section>
+
+        <section>
+            <h2>fa279f2615270daed6061313a48360f7</h2>
+            <fieldset>
+                <label>
+                    <span>Violas USD iOS</span>
+                </label>
+                <img ks-original="image/ios-violas-usd-fa279f2615270daed6061313a48360f7.png">
+            </fieldset>
+        </section>
+
+        <section>
+            <h2>fa279f2615270daed6061313a48360f7</h2>
+            <fieldset>
+                <label>
+                    <span>Libra LBR iOS</span>
+                </label>
+                <img ks-original="image/ios-libra-lbr-fa279f2615270daed6061313a48360f7.png">
+            </fieldset>
+        </section>
     </article>
 </main>
 
