fix iOS 收款码截图不显示问题

--- a/screen_capture_collection_address.html
+++ b/screen_capture_collection_address.html
@@ -48,7 +48,7 @@
                 <label>
                     <span>Violas USD iOS</span>
                 </label>
-                <img ks-original="image/ios-violas-usd-fa279f2615270daed6061313a48360f7.png">
+                <img ks-original="image/ios-violas-usd-fa279f2615270daed6061313a48360f7.PNG">
             </fieldset>
         </section>
 
@@ -58,7 +58,7 @@
                 <label>
                     <span>Libra LBR iOS</span>
                 </label>
-                <img ks-original="image/ios-libra-lbr-fa279f2615270daed6061313a48360f7.png">
+                <img ks-original="image/ios-libra-lbr-fa279f2615270daed6061313a48360f7.PNG">
             </fieldset>
         </section>
     </article>
