--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <section>
             <h2>交易工具</h2>
             <p><a class="btn green" href="typetag_generate.html">Libra/Violas 交易币种 TypeTag 生成器</a></p>
+            <p><a class="btn green" href="btc_mapping_script_generate.html">Bitcoin 映射脚本生成工具</a></p>
         </section>
 
         <section>
