--- a/btc_mapping_script_generate.html
+++ b/btc_mapping_script_generate.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bitcoin 映射脚本生成工具/title>
+    <title>Bitcoin 映射脚本生成工具</title>
     <link href="https://cdn.jsdelivr.net/gh/Dreamer-Paul/Kico-Style/kico.min.css" rel="stylesheet" type="text/css"/>
     <link href="static/doc.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1"/>
